@@ -20,6 +20,7 @@ Bug fixes:
 - PR#5118: Camlp4o and integer literals
 - PR#5128: typo in 'Camlp4ListComprehension' syntax extension
 - PR#5165: ocamlbuild does not pass '-thread' option to ocamlfind
+- PR#5167: camlp4r loops when printing package type
 - PR#5172: camlp4 support for 'module type of' construct
 - PR#5177: Gc.compact implies Gc.full_major
 - PR#5213: ocamlbuild should pass '-rectypes' to ocamldoc when needed
